Further scheduler implementation
