# src/api/endpoint/models/__init__.py
@@ -3,6 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from .action import Action
 from .agent import Agent
 from .error import Error
 from .info import Info
@@ -14,9 +15,12 @@ from .switch_device_state_query import SwitchDeviceStateQuery
 from .device_value import DeviceValue
 from .device_value_query import DeviceValueQuery
 from .agent_query import AgentQuery
-from .device_query import DeviceQuery 
+from .device_query import DeviceQuery
 from .sensor_device_datasheet import SensorDeviceDatasheet
 from .switchable_device_datasheet import SwitchableDeviceDatasheet
 from .sensor_device_datasheet_datasheet import SensorDeviceDatasheetDatasheet
 from .switchable_device_datasheet_datasheet import SwitchableDeviceDatasheetDatasheet
-
+from .task import Task
+from .task_description import TaskDescription
+from .task_id import TaskId
+from .task_update import TaskUpdate
